Some work on ChangeSizes
Corrected some lines in old code and added test. Added new code that allows computation of sigmas. For now only causal part and r/l shift

--- a/Code/ChangeSizes.ipynb
+++ b/Code/ChangeSizes.ipynb
@@ -66,6 +66,7 @@
     "    correct = True\n",
     "    dim_state = dim_state_in\n",
     "    for i,st in enumerate(system.stages):\n",
+    "        #check if the state input is correct for A and C\n",
     "        if st.A_matrix.shape[1] != dim_state:\n",
     "            correct = False\n",
     "            rep = rep + \"Problem at index \"+str(i)+\": State dims of A do not match: old:\"+str(dim_state)+ \\\n",
@@ -74,21 +75,27 @@
     "            correct = False\n",
     "            rep = rep + \"Problem at index \"+str(i)+\": State dims of C do not match: old:\"+str(dim_state)+ \\\n",
     "                  \" new: \"+str(st.C_matrix.shape[1])+\"\\n\"\n",
+    "            \n",
+    "        #check if the state output of A and B match\n",
     "        dim_state = st.A_matrix.shape[0]\n",
     "        if st.B_matrix.shape[0] != dim_state:\n",
     "            correct = False\n",
     "            rep = rep + \"Problem at index \"+str(i)+\": State dims of A and B do not match: A:\"+str(dim_state)+ \\\n",
     "                  \"B: \"+str(st.B_matrix.shape[0]) + \"\\n\"\n",
+    "            \n",
+    "        #check if the input dims match\n",
     "        if st.B_matrix.shape[1] != st.D_matrix.shape[1]:\n",
     "            correct = False\n",
     "            rep = rep + \"Problem at index \"+str(i)+\": Input dims of B and D do not match: B:\"+str(st.B_matrix.shape[1])+ \\\n",
     "                  \"D: \"+str(st.D_matrix.shape[1]) +\"\\n\"\n",
     "        \n",
+    "        #check if the output states match\n",
     "        if st.C_matrix.shape[0] != st.D_matrix.shape[0]:\n",
     "            correct = False\n",
     "            rep = rep + \"Problem at index \"+str(i)+\": Output dims of C and D do not match: C:\"+str(st.C_matrix.shape[0])+ \\\n",
     "                  \"D: \"+str(st.D_matrix.shape[0]) +\"\\n\"\n",
     "    if dim_state != dim_state_out:\n",
+    "        correct = False\n",
     "        rep = rep + \"final state dim does not match\"\n",
     "    if text_output:\n",
     "        if correct:\n",
@@ -163,8 +170,8 @@
     "    if abs(s[-1])<tol:\n",
     "        #not full rank-> not minimal -> reduce dimentions\n",
     "        print('remove')\n",
-    "        sys.stages[v].A_matrix = Vt[:-1,:sys.stages[v].A_matrix.shape[1]]#*s[:-1])\n",
-    "        sys.stages[v].B_matrix = Vt[:-1,sys.stages[v].A_matrix.shape[1]:]#*s[:-1])\n",
+    "        sys.stages[v].A_matrix = Vt[:-1,:sys.stages[v].A_matrix.shape[1]]*s[:-1]#TODO: check these multiplications\n",
+    "        sys.stages[v].B_matrix = Vt[:-1,sys.stages[v].A_matrix.shape[1]:]*s[:-1]\n",
     "        \n",
     "        sys.stages[v+1].A_matrix=sys.stages[v+1].A_matrix@U[:,:-1]\n",
     "        sys.stages[v+1].C_matrix=sys.stages[v+1].C_matrix@U[:,:-1]"
@@ -347,6 +354,7 @@
     "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
     "\n",
     "system = MixedSystem(S).causal_system\n",
+    "matrix_ref = system.to_matrix()\n",
     "show_system(system)"
    ]
   },
@@ -371,19 +379,9 @@
     "move_left(system,0)\n",
     "check_dims(system)\n",
     "display(system.dims_state)\n",
-    "show_system(system)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "move_down(system,2)\n",
-    "check_dims(system)\n",
-    "display(system.dims_state)\n",
-    "show_system(system)"
+    "show_system(system)\n",
+    "\n",
+    "print(\"Diff:\",np.max(np.abs(system.to_matrix()-matrix_ref)))"
    ]
   },
   {
@@ -396,6 +394,20 @@
     "check_dims(system)\n",
     "display(system.dims_state)\n",
     "show_system(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move_down(system,2)\n",
+    "check_dims(system)\n",
+    "display(system.dims_state)\n",
+    "show_system(system)\n",
+    "\n",
+    "print(\"Diff:\",np.max(np.abs(system.to_matrix()-matrix_ref)))"
    ]
   },
   {
@@ -427,7 +439,7 @@
     "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
     "system = MixedSystem(S).causal_system\n",
     "\n",
-    "\n",
+    "matrix_ref = system.to_matrix()\n",
     "show_system(system)\n",
     "system.dims_state"
    ]
@@ -453,7 +465,8 @@
     "move_left(system,0)\n",
     "check_dims(system)\n",
     "display(system.dims_state)\n",
-    "show_system(system)"
+    "show_system(system)\n",
+    "print(\"Diff:\",np.max(np.abs(system.to_matrix()-matrix_ref)))"
    ]
   },
   {
@@ -478,7 +491,7 @@
     "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
     "system = MixedSystem(S).causal_system\n",
     "\n",
-    "\n",
+    "matrix_ref = system.to_matrix()\n",
     "show_system(system)\n",
     "system.dims_state"
    ]
@@ -504,7 +517,8 @@
     "move_down(system,1)\n",
     "check_dims(system)\n",
     "display(system.dims_state)\n",
-    "show_system(system)"
+    "show_system(system)\n",
+    "print(\"Diff:\",np.max(np.abs(system.to_matrix()-matrix_ref)))"
    ]
   },
   {
@@ -660,7 +674,9 @@
     "\n",
     "system = MixedSystem(S).causal_system\n",
     "show_system(system)\n",
-    "display(system.dims_state)\n"
+    "\n",
+    "matrix_ref = system.to_matrix()\n",
+    "display(system.dims_state)"
    ]
   },
   {
@@ -684,19 +700,9 @@
     "split(system,1,indices=(4,2))\n",
     "check_dims(system)\n",
     "display(system.dims_state)\n",
-    "show_system(system)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combine(system,1)\n",
-    "check_dims(system)\n",
-    "display(system.dims_state)\n",
-    "show_system(system)"
+    "show_system(system)\n",
+    "\n",
+    "print(\"Diff:\",np.max(np.abs(system.to_matrix()-matrix_ref)))"
    ]
   },
   {
@@ -739,6 +745,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "check_dims(system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -758,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
