--- a/Code/ChangeSizes_sigmas.ipynb
+++ b/Code/ChangeSizes_sigmas.ipynb
@@ -26,6 +26,7 @@
     "import tvsclib.utils as utils\n",
     "\n",
     "from tvsclib.transformations.output_normal import OutputNormal\n",
+    "from tvsclib.transformations.input_normal import InputNormal\n",
     "from tvsclib.transformations.reduction import Reduction"
    ]
   },
@@ -42,7 +43,7 @@
     "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
     "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
     "\n",
-    "system = MixedSystem(S).causal_system\n",
+    "system = MixedSystem(S)\n",
     "utils.show_system(system)"
    ]
   },
@@ -61,40 +62,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def transform(stages,direction):\n",
-    "    k = len(stages)\n",
-    "    sigmas = []\n",
-    "    for i in range(1,len(stages)):#loop over inices of causal states\n",
+    "def transform(stages_causal,stages_anticausal,direction):\n",
+    "    k = len(stages_causal)\n",
+    "    sigmas_causal = []\n",
+    "    sigmas_anticausal = []\n",
+    "    for i in range(1,len(stages_causal)):#loop over inices of causal states\n",
+    "        print(\"i=\",i)\n",
     "        if direction == \"l\":\n",
     "            #move left:\n",
-    "            b = stages[i-1].B_matrix[:,-1:]\n",
-    "            U,s_l,Vt= np.linalg.svd(np.hstack([stages[i-1].A_matrix,stages[i-1].B_matrix[:,:-1]]),full_matrices=False)\n",
+    "            b = stages_causal[i-1].B_matrix[:,-1:]\n",
+    "            U,s_l,Vt= np.linalg.svd(np.hstack([stages_causal[i-1].A_matrix,stages_causal[i-1].B_matrix[:,:-1]]),full_matrices=False)\n",
     "            Us=U*s_l\n",
     "\n",
     "            stages_l = [\n",
-    "                Stage(Vt[:,:stages[i-1].A_matrix.shape[1]],Vt[:,stages[i-1].A_matrix.shape[1]:],\\\n",
-    "                        stages[i-1].C_matrix,stages[i-1].D_matrix[:,:-1]),\n",
-    "                Stage(stages[i].A_matrix@Us,np.hstack((stages[i].A_matrix@b,stages[i].B_matrix)),\\\n",
-    "                        stages[i].C_matrix@Us,np.hstack((stages[i].C_matrix@b,stages[i].D_matrix)))\n",
+    "                Stage(Vt[:,:stages_causal[i-1].A_matrix.shape[1]],Vt[:,stages_causal[i-1].A_matrix.shape[1]:],\\\n",
+    "                        stages_causal[i-1].C_matrix,stages_causal[i-1].D_matrix[:,:-1]),\n",
+    "                Stage(stages_causal[i].A_matrix@Us,np.hstack((stages_causal[i].A_matrix@b,stages_causal[i].B_matrix)),\\\n",
+    "                        stages_causal[i].C_matrix@Us,np.hstack((stages_causal[i].C_matrix@b,stages_causal[i].D_matrix)))\n",
     "            ]\n",
     "\n",
     "        if direction ==\"r\"or direction==\"n\":\n",
     "            #no move-> only make R_k input normal\n",
-    "            U,s,Vt= np.linalg.svd(np.hstack([stages[i-1].A_matrix,stages[i-1].B_matrix]),full_matrices=False)\n",
+    "            U,s,Vt= np.linalg.svd(np.hstack([stages_causal[i-1].A_matrix,stages_causal[i-1].B_matrix]),full_matrices=False)\n",
     "            Us=U*s\n",
     "\n",
     "            stages_n=[\n",
-    "                Stage(Vt[:,:stages[i-1].A_matrix.shape[1]],Vt[:,stages[i-1].A_matrix.shape[1]:],\\\n",
-    "                        stages[i-1].C_matrix,stages[i-1].D_matrix),\n",
-    "                Stage(stages[i].A_matrix@Us,stages[i].B_matrix,\\\n",
-    "                        stages[i].C_matrix@Us,stages[i].D_matrix)\n",
+    "                Stage(Vt[:,:stages_causal[i-1].A_matrix.shape[1]],Vt[:,stages_causal[i-1].A_matrix.shape[1]:],\\\n",
+    "                        stages_causal[i-1].C_matrix,stages_causal[i-1].D_matrix),\n",
+    "                Stage(stages_causal[i].A_matrix@Us,stages_causal[i].B_matrix,\\\n",
+    "                        stages_causal[i].C_matrix@Us,stages_causal[i].D_matrix)\n",
     "            ]\n",
     "\n",
     "        #move right -> base on non move\n",
     "        if direction ==\"r\":\n",
     "            b = stages_n[1].B_matrix[:,:1]\n",
     "            d = stages_n[1].D_matrix[:,:1]\n",
-    "            d_add = np.zeros((stages_n[0].D_matrix.shape[0],1))\n",
+    "            #d_add = np.zeros((stages_n[0].D_matrix.shape[0],1))\n",
+    "            d_add = stages_anticausal[i-1].C_matrix@stages_anticausal[i].B_matrix[:,:1]\n",
     "\n",
     "\n",
     "            U,s_r,Vt= np.linalg.svd(np.block([[stages_n[1].A_matrix,b],\n",
@@ -108,22 +112,84 @@
     "                      stages_n[0].C_matrix,np.hstack([stages_n[0].D_matrix,d_add])),\n",
     "\n",
     "               Stage(Us[:stages_n[1].A_matrix.shape[0],:],stages_n[1].B_matrix[:,1:],\\\n",
-    "                     Us[stages_n[1].A_matrix.shape[0]:,:],stages_n[1].D_matrix[:,1:])                 \n",
+    "                     Us[stages_n[1].A_matrix.shape[0]:,:],stages_n[1].D_matrix[:,1:])\n",
     "            ]\n",
     "\n",
-    "        if direction == \"l\":\n",
-    "            stages[i-1]= stages_l[0] \n",
-    "            stages[i]= stages_l[1]\n",
-    "            sigmas.append(s_l)\n",
-    "        if direction == \"n\":\n",
-    "            stages[i-1]= stages_n[0] \n",
-    "            stages[i]= stages_n[1]\n",
-    "            sigmas.append(s)\n",
+    "\n",
+    "\n",
+    "        # Now calculate the anticausla part:\n",
+    "        #move left\n",
+    "        if direction ==\"l\":\n",
+    "            b = stages_anticausal[i-1].B_matrix[:,-1:]\n",
+    "            d = stages_causal[i-1].D_matrix[:,-1:]\n",
+    "            d_add = np.zeros((stages_anticausal[i].D_matrix.shape[0],1))\n",
+    "            #d_add = stages_causal[i].C_matrix@stages_causal[i-1].B_matrix[:,-1:]\n",
+    "            display(d_add)\n",
+    "            \n",
+    "            U,s_al,Vt= np.linalg.svd(np.block([[b,stages_anticausal[i-1].A_matrix],\n",
+    "                                               [d,stages_anticausal[i-1].C_matrix]]),full_matrices=False)\n",
+    "            sVt=s_al.reshape(-1,1)*Vt\n",
+    "            stages_anti_l=[\n",
+    "                Stage(U[:stages_anticausal[i-1].A_matrix.shape[0],:],stages_anticausal[i-1].B_matrix[:,:-1],\\\n",
+    "                      U[stages_anticausal[i-1].A_matrix.shape[0]:,:],stages_anticausal[i-1].D_matrix[:,:-1]),\n",
+    "                 #Here the A and B are more complicated as we have to stack them\n",
+    "                Stage(sVt@(np.vstack([np.zeros((1,stages_anticausal[i].A_matrix.shape[1])),stages_anticausal[i].A_matrix])),\n",
+    "                      sVt@(np.block([[np.eye(1),np.zeros(stages_anticausal[i].B_matrix.shape[1])],\n",
+    "                                     [np.zeros((stages_anticausal[i].B_matrix.shape[0],1)),stages_anticausal[i].B_matrix]])),\n",
+    "                      stages_anticausal[i].C_matrix,np.hstack([d_add,stages_anticausal[i].D_matrix]))\n",
+    "            ]\n",
+    "\n",
+    "\n",
+    "        if direction ==\"r\"or direction==\"n\":\n",
+    "            #no move-> only make R_k input normal\n",
+    "            U,s_a,Vt= np.linalg.svd(np.vstack([stages_anticausal[i-1].A_matrix,stages_anticausal[i-1].C_matrix]),full_matrices=False)\n",
+    "            sVt=s_a.reshape(-1,1)*Vt\n",
+    "\n",
+    "            stages_anti_n=[\n",
+    "                Stage(U[:stages_anticausal[i-1].A_matrix.shape[0],:],stages_anticausal[i-1].B_matrix,\\\n",
+    "                      U[stages_anticausal[i-1].A_matrix.shape[0]:,:],stages_anticausal[i-1].D_matrix),\n",
+    "                Stage(sVt@stages_anticausal[i].A_matrix,sVt@stages_anticausal[i].B_matrix,\\\n",
+    "                      stages_anticausal[i].C_matrix,stages_anticausal[i].D_matrix)\n",
+    "            ]\n",
+    "\n",
+    "\n",
     "        if direction == \"r\":\n",
-    "            stages[i-1]= stages_r[0] \n",
-    "            stages[i]= stages_r[1]\n",
-    "            sigmas.append(s_r)\n",
-    "    return sigmas"
+    "            #move right: -> base on non move\n",
+    "            b = stages_anti_n[1].B_matrix[:,:1]\n",
+    "            U,s_ar,Vt= np.linalg.svd(np.hstack([stages_anti_n[1].A_matrix,stages_anti_n[1].B_matrix[:,1:]]),full_matrices=False)\n",
+    "            sVt=s_ar.reshape(-1,1)*Vt\n",
+    "\n",
+    "            stages_anti_r = [\n",
+    "                Stage(stages_anti_n[0].A_matrix@U,np.hstack((stages_anti_n[0].B_matrix,stages_anti_n[0].A_matrix@b)),\\\n",
+    "                      stages_anti_n[0].C_matrix@U,np.hstack((np.zeros((stages_anti_n[0].D_matrix.shape[0],1)),stages_anti_n[0].D_matrix))),\n",
+    "                #D is here 0, instead we have d_add at the causal system. Insted we could use stages_anti_n[0].C_matrix@b\n",
+    "                Stage(sVt[:,:stages_anti_n[1].A_matrix.shape[1]],sVt[:,stages_anti_n[1].A_matrix.shape[1]:],\\\n",
+    "                        stages_anti_n[1].C_matrix,stages_anti_n[1].D_matrix[:,:-1])\n",
+    "            ]\n",
+    "\n",
+    "\n",
+    "        if direction == \"l\":\n",
+    "            stages_causal[i-1]= stages_l[0]\n",
+    "            stages_causal[i]= stages_l[1]\n",
+    "            stages_anticausal[i-1]= stages_anti_l[0]\n",
+    "            stages_anticausal[i]= stages_anti_l[1]\n",
+    "            sigmas_causal.append(s_l)\n",
+    "            sigmas_anticausal.append(s_al)\n",
+    "        if direction == \"n\":\n",
+    "            stages_causal[i-1]= stages_n[0]\n",
+    "            stages_causal[i]= stages_n[1]\n",
+    "            stages_anticausal[i-1]= stages_anti_n[0]\n",
+    "            stages_anticausal[i]= stages_anti_n[1]\n",
+    "            sigmas_causal.append(s)\n",
+    "            sigmas_anticausal.append(s_a)\n",
+    "        if direction == \"r\":\n",
+    "            stages_causal[i-1]= stages_r[0]\n",
+    "            stages_causal[i]= stages_r[1]\n",
+    "            stages_anticausal[i-1]= stages_anti_r[0]\n",
+    "            stages_anticausal[i]= stages_anti_r[1]\n",
+    "            sigmas_causal.append(s_r)\n",
+    "            sigmas_anticausal.append(s_ar)\n",
+    "    return sigmas_causal,sigmas_anticausal\n"
    ]
   },
   {
@@ -220,6 +286,130 @@
    "outputs": [],
    "source": [
     "utils.show_system(sys_move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys_move_causal = system.causal_system.copy()\n",
+    "sys_move_anticausal = system.anticausal_system.copy()\n",
+    "\n",
+    "sys_move_causal = OutputNormal().apply(sys_move_causal)\n",
+    "sys_move_anticausal = InputNormal().apply(sys_move_anticausal)\n",
+    "\n",
+    "sys_move =MixedSystem(causal_system=sys_move_causal,anticausal_system=sys_move_anticausal)\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal=transform(sys_move.causal_system.stages,sys_move.anticausal_system.stages,\"l\")\n",
+    "utils.show_system(sys_move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = matrix\n",
+    "\n",
+    "dims_in = sys_move.dims_in\n",
+    "dims_out = sys_move.dims_out\n",
+    "\n",
+    "print(\"causal:\")\n",
+    "for k in range(1,len(system.causal_system.stages)):\n",
+    "    sigmas_r = np.linalg.svd(A[-np.sum(dims_out[k:]):,:np.sum(dims_in[:k])],compute_uv=False)\n",
+    "    sigmas_a = np.zeros_like(sigmas_r)\n",
+    "    sigmas_a[:len(sigmas_causal[k-1])]=sigmas_causal[k-1]\n",
+    "    print(np.allclose(sigmas_r,sigmas_a))\n",
+    "    #print(\"Ref:\",sigmas_r)\n",
+    "    #print(\"calc:\",sigmas[k-1])\n",
+    "    \n",
+    "print(\"anticausal:\")\n",
+    "for k in range(0,len(system.causal_system.stages)-1):\n",
+    "    sigmas_r = np.linalg.svd(A[:np.sum(dims_out[:k+1]),-np.sum(dims_in[k+1:]):],compute_uv=False)\n",
+    "    sigmas_a = np.zeros_like(sigmas_r)\n",
+    "    sigmas_a[:len(sigmas_anticausal[k])]=sigmas_anticausal[k]\n",
+    "    print(np.allclose(sigmas_r,sigmas_a))\n",
+    "    #print(\"Ref:\",sigmas_r)\n",
+    "    #print(\"calc:\",sigmas_anticausal[k])\n",
+    "\n",
+    "diff = system.to_matrix()-sys_move.to_matrix()\n",
+    "#plt.matshow(diff)\n",
+    "np.max(np.abs(diff))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(np.abs(sys_move.to_matrix()-system.to_matrix()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.matshow(sys_move.to_matrix()-system.to_matrix())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.show_system(sys_move.causal_system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.show_system(sys_move.anticausal_system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys_move.anticausal_system.stages[2].D_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys_move.anticausal_system.stages[2].D_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys_move.anticausal_system.stages[1].D_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.check_dims(sys_move.anticausal_system)"
    ]
   },
   {
