Added code to move the bounds based on the sigmas for the different variants

--- a/Code/ChangeSizes_sigmas.ipynb
+++ b/Code/ChangeSizes_sigmas.ipynb
@@ -57,6 +57,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Move Right/left"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -320,6 +327,13 @@
     "diff = system.to_matrix()-sys_move.to_matrix()\n",
     "#plt.matshow(diff)\n",
     "np.max(np.abs(diff))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Move up/down"
    ]
   },
   {
@@ -594,6 +608,131 @@
     "diff = system.to_matrix()-sys_move.to_matrix()\n",
     "#plt.matshow(diff)\n",
     "np.max(np.abs(diff))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combine movements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys_move_causal = system.causal_system.copy()\n",
+    "sys_move_anticausal = system.anticausal_system.copy()\n",
+    "\n",
+    "sys_move_causal = InputNormal().apply(sys_move_causal)\n",
+    "sys_move_anticausal = OutputNormal().apply(sys_move_anticausal)\n",
+    "\n",
+    "sys_move =MixedSystem(causal_system=sys_move_causal,anticausal_system=sys_move_anticausal)\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal=transform_updown(sys_move.causal_system.stages,\n",
+    "                                                 sys_move.anticausal_system.stages,\"d\")\n",
+    "\n",
+    "sigmas_causal,sigmas_anticausal=transform(sys_move.causal_system.stages,\n",
+    "                                                 sys_move.anticausal_system.stages,\"l\")\n",
+    "utils.check_dims(sys_move.causal_system)\n",
+    "utils.show_system(sys_move)\n",
+    "A = matrix\n",
+    "\n",
+    "dims_in = sys_move.dims_in\n",
+    "dims_out = sys_move.dims_out\n",
+    "\n",
+    "print(\"causal:\")\n",
+    "for k in range(1,len(system.causal_system.stages)):\n",
+    "    sigmas_r = np.linalg.svd(A[-np.sum(dims_out[k:]):,:np.sum(dims_in[:k])],compute_uv=False)\n",
+    "    sigmas_a = np.zeros_like(sigmas_r)\n",
+    "    sigmas_a[:len(sigmas_causal[k-1])]=sigmas_causal[k-1]\n",
+    "    print(np.allclose(sigmas_r,sigmas_a))\n",
+    "    #print(\"Ref:\",sigmas_r)\n",
+    "    #print(\"calc:\",sigmas[k-1])\n",
+    "    \n",
+    "print(\"anticausal:\")\n",
+    "for k in range(0,len(system.causal_system.stages)-1):\n",
+    "    sigmas_r = np.linalg.svd(A[:np.sum(dims_out[:k+1]),-np.sum(dims_in[k+1:]):],compute_uv=False)\n",
+    "    sigmas_a = np.zeros_like(sigmas_r)\n",
+    "    sigmas_a[:len(sigmas_anticausal[k])]=sigmas_anticausal[k]\n",
+    "    print(np.allclose(sigmas_r,sigmas_a))\n",
+    "    #print(\"Ref:\",sigmas_r)\n",
+    "    #print(\"calc:\",sigmas_anticausal[k])\n",
+    "\n",
+    "diff = system.to_matrix()-sys_move.to_matrix()\n",
+    "#plt.matshow(diff)\n",
+    "np.max(np.abs(diff))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import move"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#matrix = np.arange(0,12).reshape((-1,1))@np.arange(0,12).reshape((1,-1))\n",
+    "matrix = np.random.rand(8*6,8*6)\n",
+    "dims_in =  np.array([8]*6)\n",
+    "dims_out = np.array([8]*6)\n",
+    "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
+    "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
+    "\n",
+    "system_rand = MixedSystem(S)\n",
+    "\n",
+    "def cost(s,s_a):\n",
+    "    c =np.sum(s)+np.sum(s_a)\n",
+    "    return c\n",
+    "  \n",
+    "    \n",
+    "def cost_scaled(s,s_a):\n",
+    "    c =np.sum(s/np.max(s))+np.sum(s_a/np.max(s_a))\n",
+    "    return c\n",
+    "\n",
+    "sys_move,input_dims,output_dims = move.move(system_rand,7,cost_scaled)\n",
+    "utils.show_system(sys_move)\n",
+    "\n",
+    "print(input_dims)\n",
+    "print(output_dims)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.check_dims(sys_move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(input_dims.shape[0]):\n",
+    "    plt.plot(np.sum(input_dims[:i+1,:],axis=0),\"+-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(output_dims.shape[0]):\n",
+    "    plt.plot(np.sum(output_dims[:i+1,:],axis=0),\"+-\")"
    ]
   },
   {
