Done some work on change sizes.
Added the possibility to move other distances
Changed the transformation such that the systems remain (nearly) minimal
Added a short test function

--- a/Code/ChangeSizes_sigmas.ipynb
+++ b/Code/ChangeSizes_sigmas.ipynb
@@ -682,24 +682,53 @@
    "outputs": [],
    "source": [
     "#matrix = np.arange(0,12).reshape((-1,1))@np.arange(0,12).reshape((1,-1))\n",
-    "matrix = np.random.rand(8*6,8*6)\n",
-    "dims_in =  np.array([8]*6)\n",
-    "dims_out = np.array([8]*6)\n",
+    "N = 9\n",
+    "in_start = 11\n",
+    "out_start = 11\n",
+    "matrix = np.random.rand(N*out_start,N*in_start)\n",
+    "dims_in =  np.array([in_start]*N)\n",
+    "dims_out = np.array([out_start]*N)\n",
     "T = ToeplitzOperator(matrix, dims_in, dims_out)\n",
     "S = SystemIdentificationSVD(T,epsilon=1e-12)\n",
     "\n",
     "system_rand = MixedSystem(S)\n",
     "\n",
-    "def cost(s,s_a):\n",
+    "def cost(s,shape,s_a,shape_a):\n",
     "    c =np.sum(s)+np.sum(s_a)\n",
     "    return c\n",
+    "\n",
+    "#cost relative to size\n",
+    "def cost_rel(s,shape,s_a,shape_a):\n",
+    "    print(\"shape:\",shape)\n",
+    "    print(\"shape_a:\",shape_a)\n",
+    "    c =np.sum(s**2)/(shape[0]*shape[1])+np.sum(s_a**2)/(shape_a[0]*shape_a[1])\n",
+    "    return c\n",
     "  \n",
+    "def cost_check(s,shape,s_a,shape_a):\n",
+    "    print(shape[0]+shape_a[0])\n",
+    "    print(shape[1]+shape_a[1])\n",
+    "    return 0\n",
     "    \n",
-    "def cost_scaled(s,s_a):\n",
+    "\n",
+    "def cost_scaled(s,shape,s_a,shape_a):\n",
     "    c =np.sum(s/np.max(s))+np.sum(s_a/np.max(s_a))\n",
     "    return c\n",
     "\n",
-    "sys_move,input_dims,output_dims = move.move(system_rand,7,cost_scaled)\n",
+    "def cost_error_cut_rel(s,shape,s_a,shape_a):\n",
+    "    tau = 0.5\n",
+    "    c = np.sum(s[s<tau*np.max(s)]**2)/(shape[0]*shape[1])+\\\n",
+    "        np.sum(s_a[s_a<tau*np.max(s_a)]**2)/(shape_a[0]*shape_a[1])\n",
+    "    return c\n",
+    "\n",
+    "def cost_error_cut_abs(s,shape,s_a,shape_a):\n",
+    "    c = np.sum(s[s<eps]**2)+np.sum(s_a[s_a<eps]**2)\n",
+    "    return c\n",
+    "\n",
+    "eps_max = np.linalg.svd(matrix[int(np.floor(N/2)*out_start):,:int(np.floor(N/2)*in_start)],compute_uv=False)[0]\n",
+    "print(eps_max)\n",
+    "eps = eps_max*0.5\n",
+    "\n",
+    "sys_move,input_dims,output_dims = move.move(system_rand,8,cost_error_cut_rel)\n",
     "utils.show_system(sys_move)\n",
     "\n",
     "print(input_dims)\n",
@@ -733,6 +762,15 @@
    "source": [
     "for i in range(output_dims.shape[0]):\n",
     "    plt.plot(np.sum(output_dims[:i+1,:],axis=0),\"+-\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move.test_moves(system_rand,4,epsilon=1e-15)"
    ]
   },
   {
